// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyImageTest ImageRTLTest 1`] = `
{
  "Automation Tree": {},
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Children": [
      {
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          20,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          460,
          10,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -20,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -10,
          20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          10,
          260,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -20,
          -20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          20,
          -10,
          0,
        ],
        "Opacity": 1,
        "Size": [
          460,
          10,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          -20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          10,
          260,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "image-container",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      500,
      300,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyImageTest ImageWithBorderTest 1`] = `
{
  "Automation Tree": {},
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          20,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          460,
          10,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          -20,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          -10,
          20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          10,
          260,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          -20,
          -20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          20,
          -10,
          0,
        ],
        "Opacity": 1,
        "Size": [
          460,
          10,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          0,
          -20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": [
          0,
          20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          10,
          260,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "image-container",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      500,
      300,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyImageTest ImageWithoutBorderTest 1`] = `
{
  "Automation Tree": {},
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Comment": "image-container",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      500,
      300,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyImageTest ImageWithoutBorderTestOneMoreClick 1`] = `
{
  "Automation Tree": {},
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Children": [
      {
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          20,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          460,
          10,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -20,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -10,
          20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          10,
          260,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -20,
          -20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          20,
          -10,
          0,
        ],
        "Opacity": 1,
        "Size": [
          460,
          10,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          -20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          20,
          0,
        ],
        "Opacity": 1,
        "Size": [
          10,
          260,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "image-container",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      500,
      300,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
